# serializer version: 1
# name: test_index_assignment
  dict({
    <class 'compiler.ast.statements.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.variable.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.array.ArrayLiteral'>: dict({
                'members': dict({
                  <class 'compiler.ast.array.ArrayElements'>: dict({
                    'members': list([
                      dict({
                        <class 'compiler.ast.array.ArrayElement'>: dict({
                          'element': dict({
                            <class 'compiler.ast.literals.IntLiteral'>: dict({
                              'value': 2,
                            }),
                          }),
                        }),
                      }),
                      dict({
                        <class 'compiler.ast.array.ArrayElement'>: dict({
                          'element': dict({
                            <class 'compiler.ast.literals.IntLiteral'>: dict({
                              'value': 3,
                            }),
                          }),
                        }),
                      }),
                    ]),
                  }),
                }),
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.array.IndexAssignment'>: dict({
            'arrayname': dict({
              <class 'compiler.ast.variable.Variable'>: dict({
                'value': Token('IDENTIFIER', 'x'),
              }),
            }),
            'index': dict({
              <class 'compiler.ast.literals.IntLiteral'>: dict({
                'value': 1,
              }),
            }),
            'value': dict({
              <class 'compiler.ast.literals.IntLiteral'>: dict({
                'value': 4,
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_index_assignment.1
  dict({
    <class 'compiler.ast.statements.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.variable.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.array.ArrayLiteral'>: dict({
                    'fields': dict({
                      'members': dict({
                        <class 'compiler.ast.array.ArrayElements'>: dict({
                          'fields': dict({
                            'members': list([
                              dict({
                                <class 'compiler.ast.array.ArrayElement'>: dict({
                                  'fields': dict({
                                    'element': dict({
                                      <class 'compiler.ast.literals.IntLiteral'>: dict({
                                        'fields': dict({
                                        }),
                                        'type': <class 'compiler.langtypes.Int'>,
                                      }),
                                    }),
                                  }),
                                  'type': <class 'compiler.langtypes.Int'>,
                                }),
                              }),
                              dict({
                                <class 'compiler.ast.array.ArrayElement'>: dict({
                                  'fields': dict({
                                    'element': dict({
                                      <class 'compiler.ast.literals.IntLiteral'>: dict({
                                        'fields': dict({
                                        }),
                                        'type': <class 'compiler.langtypes.Int'>,
                                      }),
                                    }),
                                  }),
                                  'type': <class 'compiler.langtypes.Int'>,
                                }),
                              }),
                            ]),
                          }),
                          'type': <class 'compiler.langtypes.Int'>,
                        }),
                      }),
                    }),
                    'type': <class 'compiler.langtypes.Array'>,
                  }),
                }),
              }),
            }),
          }),
          dict({
            <class 'compiler.ast.array.IndexAssignment'>: dict({
              'fields': dict({
                'arrayname': dict({
                  <class 'compiler.ast.variable.Variable'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Array'>,
                  }),
                }),
                'index': dict({
                  <class 'compiler.ast.literals.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
                'value': dict({
                  <class 'compiler.ast.literals.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
            }),
          }),
        ]),
      }),
    }),
  })
# ---
